Clean up exception handling. Implement first.